--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.0.1",
     "@material-ui/core": "^4.11.3",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
@@ -13,13 +14,14 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hook-form": "^5.1.3",
+    "react-hook-form": "^7.0.4",
     "react-perf-devtool": "^3.1.8",
     "react-redux": "^7.2.3",
     "react-router-dom": "latest",
     "react-scripts": "^4.0.3",
     "styled-components": "^4.3.1",
-    "throttle-debounce": "^2.1.0"
+    "throttle-debounce": "^2.1.0",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
