--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-redux": "^7.2.3",
     "react-router-dom": "latest",
     "react-scripts": "^4.0.3",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "styled-components": "^4.3.1",
     "throttle-debounce": "^2.1.0",
     "yup": "^0.32.9"
